Update build.gradle
This is an updated build.gradle. We have added the depedencies that you described in the README.md and we have changed a few commands such as rootDir to projectDir because otherwise there was an error.